# rustycord

./: Cargo.toml  README.md
examples/: env_variable.rs  events.rs  login.rs  logs.rs  simple.rs
src/: client.rs  error.rs  errors.rs  http.rs  lib.rs
src/client/: client.rs  error.rs  mod.rs
src/http/: error.rs  http.rs  mod.rs
src/models/: common.rs  error.rs  gateway.rs  mod.rs  token.rs  user.rs
