[package]
name = "rustycord"
version = "0.1.0"
authors = ["SyedAhkam <smahkam57@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="1.6.1", features=[
    "rt",
    "rt-multi-thread",
    "macros"
]}
reqwest = { version="0.11.3", features=["json"] }
serde = { version="1.0.126", features=["derive"] }
serde-aux = "2.2.0"
