[package]
name = "rustycord"
version = "0.1.0"
authors = ["SyedAhkam <smahkam57@gmail.com>"]
edition = "2018"
repository = "https://github.com/SyedAhkam/rustycord"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="1.6.1", features=[
    "rt",
    "rt-multi-thread",
    "macros",
    "process"
]}
tokio-tungstenite = { version="0.14.0", features=["rustls-tls"], git="https://github.com/snapview/tokio-tungstenite" }

reqwest = { version="0.11.3" }

serde = { version="1.0.126", features=["derive"] }
serde_json = "1.0"
serde-aux = "2.2.0"
serde_repr = "0.1"

snafu = "0.6.10"
log = "0.4"
rustc_version_runtime = "0.2.0"
futures-util = "0.3.15"

[dev-dependencies]
env_logger = "0.8.3"
